--- a/react-start/package.json
+++ b/react-start/package.json
@@ -11,6 +11,8 @@
     "chart.js": "^4.5.1",
     "echarts": "^6.0.0",
     "echarts-for-react": "^3.0.5",
+    "exceljs": "^4.4.0",
+    "file-saver": "^2.0.5",
     "react": "^19.2.3",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.2.3",
