변경점 적용

--- a/react-start/package.json
+++ b/react-start/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^19.2.3",
     "react-scripts": "5.0.1",
     "realgrid": "^2.9.6",
+    "recharts": "^3.6.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
