--- a/spring_service/build.gradle
+++ b/spring_service/build.gradle
@@ -26,6 +26,13 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
+	// 1. JPA 지원 (Hibernate 포함)
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    // 2. SQLite JDBC 드라이버
+    implementation 'org.xerial:sqlite-jdbc:3.45.1.0'
+    // 3. SQLite용 Hibernate Dialect (Spring Boot 3.x 필수)
+    implementation 'org.hibernate.orm:hibernate-community-dialects'	
+
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	annotationProcessor 'org.projectlombok:lombok'
